# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import organizationsRouter from "./organizations";
 import directReportsRouter from "./directReports";
 import announcementsRouter from "./announcements";
 import dashboardRouter from "./dashboard";
+import idealWeekRouter from "./idealWeek";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use(organizationsRouter);
 router.use(directReportsRouter);
 router.use(announcementsRouter);
 router.use(dashboardRouter);
+router.use(idealWeekRouter);
 
 export default router;
